Bug 223457 - Messages can't be saved or sent
Summary: Messages can't be saved or sent
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 1.99.0
Platform: Unlisted Binaries Linux
: VHI normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-01-19 20:52 UTC by Thomas McGuire
Modified: 2010-01-25 14:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-01-19 20:52:01 UTC
When trying to save a message as draft or sending it, KMail produces the error message "Error composing message: No charsets were available for encoding. Please report this bug."

It is important to fix this, as this hinders testing.
Comment 1 Torgny Nyblom 2010-01-25 14:54:40 UTC
SVN commit 1080057 by tnyblom:

Enable Sending/Saving of new mail.
(When using the old config system one should supply a sane default value...)

BUG:223457


 M  +1 -2      codecmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1080057