Enable Sending/Saving of new mail. (When using the old config system one should supply a sane default value...)

BUG:223457

svn path=/trunk/KDE/kdepim/kmail/; revision=1080057